2015-06-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-243

	* controlfiles/general/general.arts: Added a temporary solution,
	to get qarts to work without a lot of hazzle:
	Touch( nlte_quantum_identifiers )

2015-06-17  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-242

	* controlfiles/artscomponents/arts-xml-data/
	TestPlanetIsoRatios.[Venus,Mars,Jupiter].y_reference.xml:
	Added reference data missing in commit arts-2-3-240.

2015-06-17  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-241

	* This code was provided by Richard and committed by me after
	fixing the bug mentioned further down in my changes:

	* src/linerecord.h (SetElow): Added.

	* src/methods.cc, src/m_linerecord.cc
	(abs_linesReplaceWithLines,
	abs_linesReplaceParameterWithLinesParameter):

	Added methods to replace line data. The lines are matched by quantum
	numbers.

	* My changes:

	* src/pressurebroadeningdata.cc
	(PressureBroadeningData::GetVectorFromData):

	Fix bug in indexing for PB_AIR_AND_WATER_BROADENING that left
	uninitialized values.

	* src/linerecord_partitionfunctiondata.cc
	(PartitionFunctionData::Type2StorageTag):

	Remove string resize statement that has no effect.

	* src/linerecord.h (SetPartitionFunctionData, SetLineMixingData,
	SetPressureBroadeningData):

	Pass function arguments by reference to avoid unnecessary copying of
	objects.

	* m_linerecord.cc (abs_linesReplaceParameterWithLinesParameter):

	Change type of lr inside loop to a const reference to avoid unnecessary
	copying of line records.

	* src/m_linerecord.cc (abs_linesReplaceWithLines,
	abs_linesReplaceParameterWithLinesParameter):

	Define ostringstream only where needed because it is expensive to
	create.

2015-06-17  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-240

	* adapted ARTS-XML-DATA-2-2-3 equivalent changes:

	* controlfiles/artscomponents/absorption/IsoRatios_H2O[orig,mani].xml:
	Updated N2 iso ratios to state of built-in data (which had changed by