@@ -1,3 +1,10 @@
+2015-06-18 Richard Larsson  <ric.larsson@gmail.com>
+
+	* arts-2-3-244
+	
+	* src/methods.cc:  Added text to better describe line matching
+	functions.  Suggested by Patrick.
+
 2015-06-17  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-243
